testsuite/tests/parser/should_fail/pfail037.alan
hello() : proc
{
  foo[4 = 5;
}
