testsuite/tests/parser/should_fail/pfail037.stderr
pfail037.alan:3:9: Error: Parse error on input `='
	Probably missing `]'

